--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lab08",
+  "homepage": "https://bubblechuk.github.io/core-such-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "react-router-dom": "^6.24.0"
   }
 }
